--- a/cities.html
+++ b/cities.html
@@ -22,12 +22,14 @@
   <hr/>
 
   <ol>
-    <li>Dhaka (16,000,000)</li>
+    <li>Dhaka    (16,000,000)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Dhaka    (20,000,000)</li>
+    <li>Ottawa      (400,000)</li>
+
 
   </ol>
 
