Add city in the end

--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,8 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Dhaka    (20,000,000)</li>
+    <li>Nigeria    (40,000,000)</li>
+    
 
   </ol>
 
